--- a/css/style.css
+++ b/css/style.css
@@ -2,32 +2,67 @@
     margin: 0px;
     padding: 0px;
 }
-header .logo img {
-    width: 50px;
-}
-header,header .menu ul{
-    width: 100%;
-    height: 50px;
-    display: flex;
 
+header,header .nav{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+}
+
+header .logo img{
+    width: 50px;
+    font-family: var(--f3-es);
+}
+.logo-name{
+    text-transform: capitalize;
+    font-family: var(--f3-es);
+    font-weight: bold;
+    font-size: 30px;
+}
+
+ul , li , a {
+    list-style: none;
+    text-decoration: none;
+    color: black;
+}
+
+.menu ul li a {
+    text-transform: capitalize;
 }
 
 .menu-btn span{
-    width: 30px;
+    width: 33px;
+    background-color:black;
+    border-radius: 7px;
     display: block;
-    height: 3px;
-    background-color: black;
-    margin: 5px;
+    height: 7px;
+    margin: 2px;
+    font-size: 0px;
+}
+.menu{
+    /* background-color: lightgray; */
+    width: 100%;
+    display: none;
+}
+.menu ul li {
+    margin: 10px;
+    padding: 7px;
+}
+
+.menu ul li a:hover {
+    color: blue;
+}
+.menu.show{
+    display: block;
+}
+
+
+footerfoot h4{
+    text-align: center;
+    text-transform: capitalize;
 
 }
-ul{
-    list-style: none;
-    text-decoration: none;
-}
-ul li{
-    margin: 7px 2px;
-
-}
-.menu , .menu-btn{
-
+.colname{
+    align-items: center;
 }
