--- a/Tour.css
+++ b/Tour.css
@@ -8,6 +8,8 @@
 {
 	padding-top:50px;
 	padding-bottom:0;
+	padding-left:50px;
+	padding-right:50px;
 	font-size:55px;
 }
 
@@ -18,7 +20,7 @@
 .header 
 {
     height: 50%;
-    background-image: linear-gradient(rgba(0,0,0,6),rgba(0,0,0,6)),url(img\uday.jpg);
+    background-image: linear-gradient(rgba(0,0,0,8),rgba(0,0,0,8)),url(img\uday.jpg);
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
@@ -26,8 +28,10 @@
 
 .header img
 {
-    width: 150px;
+    width: 90px;
     float: left;
+    margin-top:40px;
+    margin-bottom:15px;
 }
 
 .input-group
@@ -37,15 +41,16 @@
     border-radius: 80px;
     background: #fff;
     margin: auto;
-    padding: 1px;
+    padding: 1px 0px 1px 0px;
 }
 
 .form-control
 {
     border: 0 !important;
-    border-radius: 20px !important;
-    margin: 10px;
+    border-radius: 10px!important; 
+    margin: 9px;
     box-shadow: none !important;
+	
 }
 
 .input-group-text
@@ -232,14 +237,15 @@ h1
 
 .user-review p::before
 {
-    content:  '\201d';
+   content:  '\201d';
     display:block;
     position:absolute;
     font-size:100px;
     color:#6495ed;
     font-family:sans-serif;
     left: 44%;
-    top:-20px;
+    top:-20px; 
+padding:12px,12px,12px,12px;
 }
 
 .footer
@@ -251,7 +257,7 @@ h1
 
 .footer-logo
 {
-    width: 150px;
+    width: 90px;
     margin-top:15px;
     margin-bottom:15px;
 }
@@ -261,16 +267,18 @@ h1
     text-align: left;
     margin-top: 15px;
     margin-bottom: 25px;
+    margin-left: 35px;
 }
 
 .footer p
 {
     font-size: 12px;
-    text-align: justify;
-    padding-right: 35px;
+    text-align: left;
+    padding-right: 90px;
+    margin-left: 35px;
 }
 
-.footer .row .fa
+.footer .row .fa 
 {
     padding-right: 20px;
     font-size: 15px;
@@ -280,4 +288,11 @@ h1
 {
     margin-top:10px;
     background: #efefef;
+}
+
+.footer .row .fab
+{
+    padding-right:24px;
+    margin-left: 35px;
+
 }
